# pynvml-amd-windows

./: .gitignore  MANIFEST.in  README.md  prod.sh  pynvml_amd_windows_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh  update.sh
pynvml_amd_windows/: MANIFEST.in  __init__.py  pynvml.py  pynvml_amd_windows.pth
