[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynvml_amd_windows"
version = "1.0.0"
description = "pynvml-compatible library for AMD GPUs on Windows"
authors = [
    {name = "sfinktah", email = "sfinktah@github.spamtrak.org"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["pynvml_amd_windows"]

[tool.setuptools.package-data]
# Include the .pth file in the wheel and sdist
# The key "" means "for the root", so the .pth lands in site-packages
"" = ["pynvml_amd_windows.pth"]

[tool.setuptools.exclude-package-data]
# Nothing to exclude by default
