[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynvml_amd_windows"
version = "1.0.10"
description = "pynvml-compatible library for AMD GPUs on Windows"
authors = [
    {name = "sfinktah", email = "sfinktah@github.spamtrak.org"},
]
readme = "README.md"
license = "MIT"  # SPDX-style, replaces the deprecated table syntax
requires-python = ">=3.7"
dependencies = [
    "adlxpybind >=1.4.2"
]
keywords = ["amd", "gpu", "nvidia", "pynvml", "adlx", "crystools", "comfyui", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[project.urls]
"Bug Reports" = "https://github.com/sfinktah/pynvml-amd-windows/issues"
"Source" = "https://github.com/sfinktah/pynvml-amd-windows"

[tool.setuptools.data-files]
"." = ["pynvml_amd_windows.pth"]
