[metadata]
name = pynvml-amd-windows
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = pynvml-compatible library for AMD GPUs on Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pynvml-amd-windows
project_urls =
    Bug Tracker = https://github.com/yourusername/pynvml-amd-windows/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Hardware
    Topic :: System :: Monitoring

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    ADLXPybind>=1.0.0

[options.packages.find]
where = .
